chore: fixed video on mobile

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -58,6 +58,7 @@ body {
 
 html {
     scroll-behavior: smooth;
+    overflow-x: hidden;
 }
 
 
